<resources>
    <string name="title_home">首頁</string>
    <string name="title_rank_list">排行榜</string>
    <string name="title_notifications">訊息</string>
    <string name="title_mine">我的</string>
    <string name="toast_certification">提領需通過真人認證</string>
    <string name="version_latest">已是最新版本!</string>
    <string name="face_detect_alert_dialog_msg_exit_text">退出</string>
    <string name="face_detect_alert_dialog_msg_light_enough">光線充足</string>
    <string name="face_detect_alert_dialog_msg_not_too_fast">動作大些\n不要太快</string>
    <string name="face_detect_alert_dialog_msg_ok_text">確定</string>
    <string name="face_detect_alert_dialog_msg_right_pose">看著螢幕</string>
    <string name="face_detect_alert_dialog_msg_timeout">請重試</string>
    <string name="face_detect_auth_begin_cancel">放棄</string>
    <string name="face_detect_auth_begin_ok">開始</string>
    <string name="face_detect_dialog_btn_sure">確定</string>
    <string name="ssdk_oks_refreshing">刷新中…</string>
    <string name="ssdk_oks_release_to_refresh">鬆開刷新</string>
    <string name="ssdk_oks_share_completed">分享成功</string>
    <string name="ssdk_oks_share_failed">分享失败</string>
    <string name="ssdk_oks_share_cancel">取消分享</string>
    <string name="srl_footer_failed">加載失敗</string>
    <string name="srl_footer_finish">加載完成</string>
    <string name="srl_footer_loading">正在加載…</string>
    <string name="srl_footer_nothing">沒有更多數據了</string>
    <string name="srl_footer_pulling">上拉加載更多</string>
    <string name="srl_footer_refreshing">等待頭部刷新完成…</string>
    <string name="srl_footer_release">釋放立即加載</string>
    <string name="tab_female_1">附近</string>
    <string name="tab_female_2">新註冊</string>
    <string name="tab_female_3">女神</string>
    <string name="tab_male_1">附近</string>
    <string name="tab_male_2">VIP</string>
    <string name="tab_message_1">聊天</string>
    <string name="tab_message_2">官方訊息</string>
    <string name="tab_wallet_1">現金</string>
    <string name="tab_wallet_2">鑽石</string>
    <string name="tab_broadcast_1">我的心情</string>
    <string name="tab_broadcast_2">我的活動</string>
    <string name="tab_broadcast_3">全部</string>
    <string name="user_sex_she">她</string>
    <string name="user_sex_her">她</string>
    <string name="user_sex_his">他</string>
    <string name="user_sex_he">他</string>
    <string name="title_login_mobile">手機號碼</string>
    <string name="login_password">密碼</string>
    <string name="login_mobile">@string/phone_number_prefix_tw</string>
    <string name="login_forgot_password">忘記密碼</string>
    <string name="login">登入</string>
    <string name="mobile_register">手機號碼登入</string>
    <string name="login_other_login">其它認證方式</string>
    <string name="user_detail_ta_dynamic">心情</string>
    <string name="user_detail_face_verification_pass">通過臉部辨識認證真實性</string>
    <string name="user_detail_is_goddess">已獲得女神認證</string>
    <string name="user_detail_broadcasting">%s正在發起活動哦</string>
    <string name="user_detail_album_tital">相冊</string>
    <string name="user_detail_album_lock">%s設定了相冊鎖</string>
    <string name="user_detail_chat_she">私訊</string>
    <string name="user_detail_profile_lock">%1$s設定了限制，查看資料需要請求%2$s的同意</string>
    <string name="user_detail_profile_lock_sended">對方通過你的請求後會訊息告知你</string>
    <string name="user_detail_paying_user">他是VIP用戶</string>
    <string name="user_detail_height">身高</string>
    <string name="user_detail_weight">體重</string>
    <string name="user_detail_resident_city">常駐城市</string>
    <string name="user_detail_friend_shows">活動內容</string>
    <string name="user_detail_hope_obj">期望對象</string>
    <string name="user_detail_self_intro">文字自介</string>
    <string name="user_detail_warn">通過PlayChat進行違法活動，經檢舉核實將對賬號進行封鎖</string>
    <string name="user_detail_btn_apply_check">請求查看</string>
    <string name="user_detail_join_like">" 追蹤"</string>
    <string name="user_detail_remove_like">" 取消追蹤"</string>
    <string name="user_detail_evaluate">評價</string>
    <string name="user_detail_chat">私訊</string>
    <string name="user_detail_social_account">社群賬號</string>
    <string name="user_detail_link_mic">語音通話</string>
    <string name="user_detail_link_empty">她未填寫社群賬號，可先與她私訊</string>
    <string name="mine_title">我的</string>
    <string name="mine_title_btn_my_evaluation">我的評價</string>
    <string name="mine_age">%s歲</string>
    <string name="mine_profile">個人檔案</string>
    <string name="mine_wallet">錢包</string>
    <string name="mine_my_likes">追蹤</string>
    <string name="mine_my_visitors_man">誰看過我</string>
    <string name="mine_my_visitors_many">粉絲</string>
    <string name="mine_certification_center">真人認證</string>
    <string name="mine_member">VIP</string>
    <string name="mine_my_adoui">聲音自介</string>
    <string name="mine_my_radio">我的廣播</string>
    <string name="mine_my_borcast">我的動態</string>
    <string name="mine_my_album">我的相冊</string>
    <string name="mine_upload_photo">上傳</string>
    <string name="mine_upload_photo_or_video">上傳</string>
    <string name="mine_album_privacy">相冊設定</string>
    <string name="mine_blacklist">封鎖名單</string>
    <string name="mine_setting">系統設定</string>
    <string name="mine_me_setting">我的設定</string>
    <string name="mine_setting_account">帳戶管理</string>
    <string name="mine_setting_desc">無痕與隱藏</string>
    <string name="mine_apply_invitation_code">邀請朋友</string>
    <string name="mine_share_app">分享PlayChat給朋友</string>
    <string name="mine_need_help">客服專員</string>
    <string name="mine_contact_service">意見與反饋</string>
    <string name="mine_complaint_service">投訴</string>
    <string name="mine_current_version">當前版本</string>
    <string name="mine_once_certification">認證</string>
    <string name="member_recharge_title">VIP中心</string>
    <string name="member_subscribe_title">會員中心</string>
    <string name="member_recharge_learn_more">了解更多</string>
    <string name="member_recharge_choose_package">選擇套餐</string>
    <string name="member_recharge_btn_confirm">成為VIP</string>
    <string name="photo_album_title_button_text_male">上傳</string>
    <string name="photo_album_title_button_female">上傳</string>
    <string name="mine_set_redpackage_photo">設定紅包照片</string>
    <string name="mine_burn">快照</string>
    <string name="mine_burn_recover">恢復</string>
    <string name="set_red_package_photo_tip">只可以設定一張紅包照片，用戶支付%s鑽石查看</string>
    <string name="mine_burn_total">有%s個人看了你的快照喔</string>
    <string name="vip_recharge_month_coin">約%s元/月</string>
    <string name="vip_recharge_month_price">鑽石/月</string>
    <string name="vip_recharge_package_item_title">VIP</string>
    <string name="vip_recharge_package_item_recommend">推薦</string>
    <string name="mine_once_ertification">讓你更受歡迎</string>
    <string name="chat_action_location">位置</string>
    <string name="chat_action_burn">快照</string>
    <string name="chat_action_picture">照片</string>
    <string name="chat_action_redpackage">紅包</string>
    <string name="chat_action_coin_redpackage">鑽石紅包</string>
    <string name="chat_action_mic">語音通話</string>
    <string name="chat_detail_warn">為保護用戶隱私，禁止對私訊內容進行截圖/錄影/側錄</string>
    <string name="setting_privacy_setting">隱私設定</string>
    <string name="setting_allow_link_mic">允許有私訊權限的人對我發起語音通話</string>
    <string name="chat_red">送你一個小禮物</string>
    <string name="chat_get_red_package">領取紅包</string>
    <string name="choose_sex_your_are">我是</string>
    <string name="choose_sex_title">我的性別</string>
    <string name="choose_sex_title1">性別不可修改喔</string>
    <string name="choose_name_your_are">我的暱稱叫</string>
    <string name="choose_name_hint">請輸入您的暱稱</string>
    <string name="choose_name_title">初次相識，好想認識您喔～</string>
    <string name="choose_birthday_name">某某莫，</string>
    <string name="choose_birthday_title1">你的生日是哪一天？</string>
    <string name="choose_birthday_title2">妳的生日是一天？</string>
    <string name="choose_birthday_title">十八歲以下不能註冊喔！</string>
    <string name="choose_portrait_title">選擇妳的頭貼</string>
    <string name="choose_portrait_titles">選擇你的頭貼</string>
    <string name="choose_portrait_title1">優質的個人形象照會更\n受歡迎喔！</string>
    <string name="confirm">確定</string>
    <string name="choose_sex_not_updata">選擇性別後無法修改</string>
    <string name="dialog_agree">同意</string>
    <string name="dialog_criterion">平臺使用規範</string>
    <string name="dialog_agreement_check">點擊查看 服務條款 和 隱私政策</string>
    <string name="dialog_comment_look">你的留言只有發佈者可見</string>
    <string name="send">發送</string>
    <string name="dialog_choose_sex_warm_content">註冊後將不能修改性別，確定嗎？</string>
    <string name="cancel">取消</string>
    <string name="dialog_choose_city">選擇城市</string>
    <string name="dialog_coin_pay">支付</string>
    <string name="dialog_coin_usable_balance">可用余額：</string>
    <string name="dialog_coin_pay_project_name">支付項目</string>
    <string name="dialog_coin_pay_project">特權兌換</string>
    <string name="dialog_coin_pay_number">支付總額</string>
    <string name="dialong_coin_rechaege_top_up">儲值</string>
    <string name="dialong_coin_doing_task">做任務</string>
    <string name="dialog_commit_evaluate_title">匿名評價</string>
    <string name="dialog_location_title">選擇城市</string>
    <string name="dialog_location_title1">可以認識附近的人哦</string>
    <string name="dialog_location_title_sel">常駐城市：</string>
    <string name="dialog_location_title_sel_hint">請選擇</string>
    <string name="submit">提交</string>
    <string name="dialog_commit_evaluate_repor">嚴重問題請檢舉</string>
    <string name="dialog_content_normal_title">活動內容</string>
    <string name="dialog_day_choose_on_time">不限時間</string>
    <string name="dialog_my_evaluate_title">你的真實評價</string>
    <string name="dialog_program_subject_choose_title">選擇活動主題</string>
    <string name="fragment_apply_message_title">申請訊息</string>
    <string name="fragment_bind_mobile_title">綁定手機號碼</string>
    <string name="fragment_bind_mobile_explain">為了你的賬號安全，請綁定手機號碼</string>
    <string name="mobile_hint">請輸入手機號碼</string>
    <string name="code_hint">請輸入收到的驗證碼</string>
    <string name="password_hint">密碼不少於8位</string>
    <string name="fragment_blacklist_title">封鎖名單</string>
    <string name="fragment_broadcast_title">我的廣播</string>
    <string name="issuance">發布</string>
    <string name="fragment_broadcast_message_title">廣播訊息</string>
    <string name="fragment_cash_total_account">賬戶總額</string>
    <string name="fragment_cash_usable_withdraw">可提領</string>
    <string name="fragment_cash_withdraw_account">PayPal賬號</string>
    <string name="fragment_cash_withdraw_account_bind">綁定PayPal賬號</string>
    <string name="fragment_certification_female_title">真人認證</string>
    <string name="fragment_certification_content">真人認證後收入增加100%</string>
    <string name="fragment_certification_tip">提領需經過真人認證喔！</string>
    <string name="fragment_certification_female_poster">免費發活動</string>
    <string name="fragment_certification_female_comment_man">留言男士活動</string>
    <string name="fragment_certification_female_chat_man">私訊男士</string>
    <string name="fragment_change_password_title">密碼更改</string>
    <string name="fragment_change_password_forget_password">忘記密碼</string>
    <string name="fragment_change_password_explain">第三方賬號登入的用戶需要先綁定手機號碼才可以設定賬戶密碼</string>
    <string name="fragment_change_password_old_password">舊密碼</string>
    <string name="fragment_change_password_old_password_hint">請輸入當前登入密碼</string>
    <string name="fragment_change_password_new_password">新密碼</string>
    <string name="fragment_change_password_new_password_hint">設定新密碼，不少於8位</string>
    <string name="issuance_time">發布時間</string>
    <string name="any_area">全部地區</string>
    <string name="stealth">無痕</string>
    <string name="hide_park_list">在公園列表隱藏我</string>
    <string name="hide_park_list_3km">對3KM內用戶隱藏我</string>
    <string name="hidden_distance_online_time">隱藏距離和在線時間</string>
    <string name="hide_distance_others">對他人隱藏我的距離</string>
    <string name="hide_online_time_other">對他人隱藏我的在線時間</string>
    <string name="dialog_set_withdraw_account_confirm">確認</string>
    <string name="privacy_setting_top_tip">開啟以下功能，其他用戶將無法通過暱稱搜尋到你</string>
    <string name="radio_selected_zuiz">追蹤的人</string>
</resources>