<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dl.play.chat.ui.mine.choosesex.ChooseSexViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_btn_background"
        android:fadingEdge="vertical"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context=".ui.login.register.RegisterFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="42dp"
                android:background="@drawable/reg_user_process1"
                android:maxWidth="330dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="81dp"
                android:text="@string/choose_sex_your_are"
                android:textColor="@color/gray_dark"
                android:textSize="32dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="21dp"
                android:text="@string/choose_sex_title"
                android:textColor="#7C8698"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="52dp"
                android:layout_marginRight="42dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_male"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ic_gender_male"
                    android:padding="3dp"
                    android:scaleType="fitXY"
                    app:onClickCommand="@{viewModel.chooseMale}" />

                <ImageView
                    android:id="@+id/iv_female"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_gender_female"
                    android:padding="3dp"
                    android:scaleType="fitXY"
                    app:onClickCommand="@{viewModel.chooseFemale}" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/choose_sex_title1"
                android:textColor="#7C8698" />

            <Button
                android:id="@+id/btn_confirm"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_below="@+id/iv_top_view"
                android:layout_marginLeft="42dp"
                android:layout_marginTop="59dp"
                android:layout_marginRight="42dp"
                android:text="@string/dialog_set_withdraw_account_confirm"
                app:onClickCommand="@{viewModel.confird}" />

        </LinearLayout>

    </ScrollView>
</layout>