<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/swift_message_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="-5dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/rl_publish_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/tv_publish_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:button="@null"
                android:clickable="false"
                android:drawableEnd="@drawable/radio_filter_text_arrow"
                android:drawablePadding="4dp"
                android:text="@string/issuance_time"
                android:textColor="@drawable/radio_filter_text_color"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/transparent"
                android:button="@null"
                android:clickable="false"
                android:drawableRight="@drawable/radio_filter_text_arrow"
                android:drawablePadding="4dp"
                android:text="@string/radio_selected_zuiz"
                android:textColor="@drawable/radio_filter_text_color"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_region"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="end">

            <CheckBox
                android:id="@+id/tv_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:button="@null"
                android:clickable="false"
                android:drawableRight="@drawable/radio_filter_text_arrow"
                android:drawablePadding="4dp"
                android:text="@string/any_area"
                android:textColor="@drawable/radio_filter_text_color"
                android:textSize="@dimen/text_size_14" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
